@@ -2,7 +2,10 @@ package com.kamikazejam.kamicommon.command.requirement;
 
 import com.kamikazejam.kamicommon.command.KamiCommand;
 import com.kamikazejam.kamicommon.nms.NmsAPI;
+import com.kamikazejam.kamicommon.nms.text.VersionedComponent;
 import com.kamikazejam.kamicommon.util.Txt;
+import java.util.Arrays;
+import java.util.Collections;
 import org.bukkit.Material;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
@@ -11,6 +14,7 @@ import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
+import java.util.ArrayList;
 
 @SuppressWarnings("unused")
 public class RequirementHasItemInHand extends RequirementAbstract {
@@ -29,7 +33,8 @@ public class RequirementHasItemInHand extends RequirementAbstract {
 
 	private final @NotNull List<Material> materialWhitelist;
 	public RequirementHasItemInHand(@NotNull Material... materialWhitelist) {
-		this.materialWhitelist = List.of(materialWhitelist);
+		// Copied, for the reason spelled out in RedisMultiChannel: asList aliases the caller's array.
+        this.materialWhitelist = Collections.unmodifiableList(new ArrayList<>(Arrays.asList(materialWhitelist)));
 	}
 
 	// -------------------------------------------- //
@@ -38,7 +43,8 @@ public class RequirementHasItemInHand extends RequirementAbstract {
 
 	@Override
 	public boolean apply(CommandSender sender, KamiCommand command) {
-		if (!(sender instanceof Player player)) return false;
+		if (!(sender instanceof Player)) return false;
+		Player player = (Player) sender;
 		ItemStack inHand = NmsAPI.getItemInMainHand(player);
 		if (this.materialWhitelist.isEmpty()) {
 			// If no whitelist is set, any item in hand is fine.
@@ -48,15 +54,20 @@ public class RequirementHasItemInHand extends RequirementAbstract {
 	}
 
 	@Override
-	public String createErrorMessage(CommandSender sender, KamiCommand command) {
-		if (!(sender instanceof Player player)) {
+	public @NotNull VersionedComponent createErrorMessage(CommandSender sender, KamiCommand command) {
+		if (!(sender instanceof Player)) {
 			return RequirementIsPlayer.get().createErrorMessage(sender, command);
 		}
+		Player player = (Player) sender;
 		ItemStack inHand = NmsAPI.getItemInMainHand(player);
 		if (inHand == null) {
-			return KamiCommand.Config.getErrorColor() + "You must be holding an item in your hand.";
+            return NmsAPI.getVersionedComponentSerializer().fromMiniMessage(
+                    KamiCommand.Config.getErrorColorMini() + "You must be holding an item in your hand."
+            );
 		}
-		return KamiCommand.Config.getErrorColor() + "Invalid Item: " + Txt.getNicedEnum(inHand.getType());
+		return NmsAPI.getVersionedComponentSerializer().fromMiniMessage(
+                KamiCommand.Config.getErrorColorMini() + "Invalid Item: " + Txt.getNicedEnum(inHand.getType())
+        );
 	}
 
 }
