@@ -1,8 +1,9 @@
 package com.kamikazejam.kamicommon.configuration.spigot;
 
 import com.cryptomorin.xseries.XMaterial;
-import com.kamikazejam.kamicommon.configuration.spigot.observe.ConfigObserver;
+import com.kamikazejam.kamicommon.configuration.observe.ConfigObserver;
 import com.kamikazejam.kamicommon.util.MessageBuilder;
+import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.Setter;
 import org.bukkit.Bukkit;
@@ -25,7 +26,7 @@ import java.util.Optional;
  */
 @Getter @Setter
 @SuppressWarnings("unused")
-public abstract class CachedConfig<T extends KamiConfig> implements ConfigObserver {
+public abstract class CachedConfig<T extends KamiConfig> implements ConfigObserver<KamiConfig> {
     /**
      * Whether the server should shut down if loading the config fails.
      * Defaults to {@code true}.
@@ -128,7 +129,7 @@ public abstract class CachedConfig<T extends KamiConfig> implements ConfigObserv
                     return present;
                 })
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // ------------------------------------ //
